--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hooks-template",
+  "name": "nhoshape",
   "reason": {
     "react-jsx": 3
   },
@@ -18,8 +18,8 @@
   "bs-dependencies": [
     "reason-react",
     "bs-css",
+    "bs-css-emotion",
     "bs-webapi",
     "@glennsl/bs-json"
-  ],
-  "refmt": 3
+  ]
 }
