--- a/package.json
+++ b/package.json
@@ -6,28 +6,27 @@
     "start": "bsb -make-world -w",
     "clean": "bsb -clean-world",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack -w",
+    "webpack": "webpack watch",
     "webpack:production": "env NODE_ENV=production webpack",
-    "server": "webpack-dev-server"
+    "serve": "webpack serve"
   },
-  "keywords": [
-    "BuckleScript"
-  ],
+  "keywords": [ "BuckleScript" ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@glennsl/bs-json": "^4.0.0",
-    "bs-css": "^8.0.4",
-    "bs-webapi": "^0.15.2",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "reason-react": ">=0.7.0"
+    "@glennsl/bs-json": "^5.0.4",
+    "bs-css-emotion": "^3.0.0",
+    "bs-webapi": "^0.19.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "reason-react": ">=0.9.1"
   },
   "devDependencies": {
-    "bs-platform": "^5.0.4",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8"
+    "bs-platform": "^9.0.2",
+    "@webpack-cli/serve": "^1.5.1",
+    "html-webpack-plugin": "^5.3.2",
+    "webpack": "^5.41.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
